cluster/apps/backend/myphpadmin/ingressroute-phpmyadmin.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin-route
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`phpmyadmin.ninerealmlabs.com`)
      kind: Rule
      # middlewares:
      #   - name: headers-default
      services:
        - name: phpmyadmin
          namespace: mariadb
          port: 80
          kind: Service

  # Use the secret generated by cert-manager
  tls:
    secretName: cert-secret-ninerealmlabs-prod
